gccida/g1/update_life_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/flow.c:1093:41: error: must use 'enum' tag to refer to type 'update_life_extent'
void  update_life_info( sbitmap blocks, update_life_extent extent, int prop_flags) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/flow.c:1192:15: error: use of undeclared identifier 'TV_LIFE_0'; did you mean 'TV_LIFE'?
timevar_push( TV_LIFE_0); 
              ^~~~~~~~~
              TV_LIFE
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/timevar.def:47:13: note: 'TV_LIFE' declared here
DEFTIMEVAR (TV_LIFE                  , "life analysis")
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/flow.c:1195:11: error: use of undeclared identifier 'TV_LIFE_0'; did you mean 'TV_LIFE'?
timevar = TV_LIFE_0; 
          ^~~~~~~~~
          TV_LIFE
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/timevar.def:47:13: note: 'TV_LIFE' declared here
DEFTIMEVAR (TV_LIFE                  , "life analysis")
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/flow.c:1198:11: error: use of undeclared identifier 'TV_LIFE_0'; did you mean 'TV_LIFE'?
timevar = TV_LIFE_0; 
          ^~~~~~~~~
          TV_LIFE
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/timevar.def:47:13: note: 'TV_LIFE' declared here
DEFTIMEVAR (TV_LIFE                  , "life analysis")
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/flow.c:1212:15: error: use of undeclared identifier 'TV_LIFE_UPDATE_0'; did you mean 'TV_LIFE_UPDATE'?
timevar_push( TV_LIFE_UPDATE_0); 
              ^~~~~~~~~~~~~~~~
              TV_LIFE_UPDATE
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/timevar.def:48:13: note: 'TV_LIFE_UPDATE' declared here
DEFTIMEVAR (TV_LIFE_UPDATE           , "life info update")
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/flow.c:1214:30: error: expected expression
fancy_abort( ( const char *)&::to, 650, "update_life_info"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/flow.c:1217:11: error: use of undeclared identifier 'TV_LIFE_UPDATE_0'; did you mean 'TV_LIFE_UPDATE'?
timevar = TV_LIFE_UPDATE_0; 
          ^~~~~~~~~~~~~~~~
          TV_LIFE_UPDATE
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/timevar.def:48:13: note: 'TV_LIFE_UPDATE' declared here
DEFTIMEVAR (TV_LIFE_UPDATE           , "life info update")
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/flow.c:1222:11: error: use of undeclared identifier 'TV_LIFE_UPDATE_0'; did you mean 'TV_LIFE_UPDATE'?
timevar = TV_LIFE_UPDATE_0; 
          ^~~~~~~~~~~~~~~~
          TV_LIFE_UPDATE
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/timevar.def:48:13: note: 'TV_LIFE_UPDATE' declared here
DEFTIMEVAR (TV_LIFE_UPDATE           , "life info update")
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/flow.c:1255:11: error: use of undeclared identifier 'TV_LIFE_UPDATE_0'; did you mean 'TV_LIFE_UPDATE'?
timevar = TV_LIFE_UPDATE_0; 
          ^~~~~~~~~~~~~~~~
          TV_LIFE_UPDATE
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/timevar.def:48:13: note: 'TV_LIFE_UPDATE' declared here
DEFTIMEVAR (TV_LIFE_UPDATE           , "life info update")
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/flow.c:1259:11: error: use of undeclared identifier 'TV_LIFE_UPDATE_0'; did you mean 'TV_LIFE_UPDATE'?
timevar = TV_LIFE_UPDATE_0; 
          ^~~~~~~~~~~~~~~~
          TV_LIFE_UPDATE
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/timevar.def:48:13: note: 'TV_LIFE_UPDATE' declared here
DEFTIMEVAR (TV_LIFE_UPDATE           , "life info update")
            ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/update_life_info/src/obj/flow.o] Error 1
